--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,40 +6,50 @@
 		<servlet-name>listing</servlet-name>
 		<servlet-class>edu.emory.library.tas.web.test.ListingServlet</servlet-class>
 	</servlet>
-
+	
 	<servlet>
 		<servlet-name>detail</servlet-name>
 		<servlet-class>edu.emory.library.tas.web.test.DetailServlet</servlet-class>
 	</servlet>
-
+	
 	<servlet>
 		<servlet-name>searchform</servlet-name>
 		<servlet-class>edu.emory.library.tas.web.test.SearchFormServlet</servlet-class>
 	</servlet>
-
+	
 	<servlet>
 		<servlet-name>searchresults</servlet-name>
 		<servlet-class>edu.emory.library.tas.web.test.SearchResultsServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>com.metaparadigm.jsonrpc.JSONRPCServlet</servlet-name>
+		<servlet-class>com.metaparadigm.jsonrpc.JSONRPCServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>listing</servlet-name>
 		<url-pattern>/listing</url-pattern>
 	</servlet-mapping>
-
+	
 	<servlet-mapping>
 		<servlet-name>detail</servlet-name>
 		<url-pattern>/detail</url-pattern>
 	</servlet-mapping>
-
+	
 	<servlet-mapping>
 		<servlet-name>searchform</servlet-name>
 		<url-pattern>/searchform</url-pattern>
 	</servlet-mapping>
-
+	
 	<servlet-mapping>
 		<servlet-name>searchresults</servlet-name>
 		<url-pattern>/searchresults</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>com.metaparadigm.jsonrpc.JSONRPCServlet</servlet-name>
+		<url-pattern>/JSON-RPC</url-pattern>
 	</servlet-mapping>
 
 </web-app>
