*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@202 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 
 	<servlet>
 		<servlet-name>import</servlet-name>
-		<servlet-class>edu.emory.library.tas.web.test.ImportServlet</servlet-class>
+		<servlet-class>edu.emory.library.tas.spss.ImportServlet</servlet-class>
 		<init-param>
 			<param-name>imports.dir</param-name>
 			<param-value>C:\Documents and Settings\zich\My Documents\Library\SlaveTrade\imports</param-value>
