*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@261 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -1,4 +1,4 @@
-# not used directly by application
+# not used directly by application, only here in ${...}
 libdir = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\WebContent\\WEB-INF\\lib
 classes = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\build\\classes\\
 
