--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,7 +25,6 @@
     <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
     </listener>
-	
 
     <servlet>
         <servlet-name>FacesServlet</servlet-name>
@@ -77,7 +76,7 @@
 
 	<servlet>
 		<servlet-name>TileServlet</servlet-name>
-		<servlet-class>edu.emory.library.tas.maps.test.TileServlet</servlet-class>
+		<servlet-class>edu.emory.library.tas.web.maps.TileServlet</servlet-class>
 	</servlet>
 
 <!-- 
