*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@337 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -15,7 +15,5 @@ import.rootdir = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveT
 import.dateformat = yyyy/MM/dd HH:mm:ss
 import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 
-#mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.skeleton = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
-mapserver.mapfile.output = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
+mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
+mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
