--- a/src/tast.properties
+++ b/src/tast.properties
@@ -18,7 +18,7 @@ import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
 #mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-#mapserver.mapfile.skeleton = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
-#mapserver.mapfile.output = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
-mapserver.mapfile.skeleton = D:\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
-mapserver.mapfile.output = D:\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
+#mapserver.mapfile.skeleton = D:\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
+#mapserver.mapfile.output = D:\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
+mapserver.mapfile.skeleton = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
+mapserver.mapfile.output = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
