--- a/src/tast.properties
+++ b/src/tast.properties
@@ -16,9 +16,10 @@ import.dateformat = yyyy/MM/dd HH:mm:ss
 import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 
 #maps
-#mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
+mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
+mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
 #mapserver.mapfile.skeleton = D:\\Library\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
 #mapserver.mapfile.output = D:\\Library\\SlaveTrade\\shapefiles\\map_{TIME}.map
-mapserver.mapfile.skeleton = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\shapefiles\\tast_map_skeleton.map
-mapserver.mapfile.output = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\shapefiles\\map_{TIME}.map
+
+map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
+map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=-40
