--- a/src/tast.properties
+++ b/src/tast.properties
@@ -17,9 +17,38 @@ import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\shapefiles
+#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
+mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
 mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
-map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=-40
+map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
+
+# this should be clear
+map.default.extent.x.min = -18000000
+map.default.extent.x.max = -18000000
+map.default.extent.y.min = -9000000
+map.default.extent.y.max = -9000000
+
+# This determines the farthest and the closest view on
+# the map. The scale on the map is implemented as an
+# integer defined as
+#
+#   scale = px/real * map.scale.factor
+#
+# The smallest value is always 1 and it the the farthest
+# view on the map. The largest value is the closest view
+# on the map as is given by map.max.magnification. Thus:
+#
+#       realscale (i.e. px/real)        scale (strored)
+#
+#                1
+# min =   ----------------     <-->           1 
+#         map.scale.factor
+#
+#       map.max.magnification
+# max = ---------------------  <-->  map.max.magnification 
+#         map.scale.factor
+#
+map.scale.factor = 360000
+map.max.magnification = 100
