*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@387 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -18,17 +18,19 @@ import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
 #mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
+#mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
+mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
 mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
 map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
 
-# this should be clear
+# this should be clear, also it depends on the
+# selected projection
 map.default.extent.x.min = -18000000
-map.default.extent.x.max = -18000000
+map.default.extent.x.max = +18000000
 map.default.extent.y.min = -9000000
-map.default.extent.y.max = -9000000
+map.default.extent.y.max = +9000000
 
 # This determines the farthest and the closest view on
 # the map. The scale on the map is implemented as an
