*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@403 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -18,8 +18,8 @@ import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
 #mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
-#mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
+#mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
+mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
 mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
