--- a/src/tast.properties
+++ b/src/tast.properties
@@ -16,12 +16,12 @@ import.dateformat = yyyy/MM/dd HH:mm:ss
 import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 
 #maps
-#mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
+mapserver.mapfile.skeleton = /home/jzich/workspace/tast/etc/gis/tast_map_skeleton.map
+mapserver.mapfile.output = /home/jzich/workspace/tast/etc/gis/map_{TIME}.map
+#mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
 #mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
-mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
-mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
+#mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
+#mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
 map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
 
