*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@440 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -15,15 +15,19 @@ import.rootdir = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveT
 import.dateformat = yyyy/MM/dd HH:mm:ss
 import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 
+#SQL scripts configuration - will be ecected every time the tomcat starts
+sql.scriptdir = /home/juri/sql/
+
 #maps
-mapserver.mapfile.skeleton = /home/jzich/workspace/tast/etc/gis/tast_map_skeleton.map
-mapserver.mapfile.output = /home/jzich/workspace/tast/etc/gis/map_{TIME}.map
+mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
+mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
 #mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
 #mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
 #mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 #mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
 map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
+map.layer.status.continent.userlabel=Continents
 
 # this should be clear, also it depends on the
 # selected projection
