--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,10 +26,30 @@
 		<filter-name>AjaxAnywhere</filter-name>
 		<filter-class>org.ajaxanywhere.AAFilter</filter-class>
 	</filter>
+	
+    <filter>
+        <filter-name>ExtensionsFilter</filter-name>
+        <filter-class>
+            org.apache.myfaces.component.html.util.ExtensionsFilter
+        </filter-class>
+        <init-param>
+            <param-name>uploadMaxFileSize</param-name>
+            <param-value>10m</param-value>
+        </init-param>
+        <init-param>
+            <param-name>uploadThresholdSize</param-name>
+            <param-value>100k</param-value>
+        </init-param>
+    </filter>	
 
     <filter-mapping>
         <filter-name>AjaxAnywhere</filter-name>
-        <url-pattern>*.faces</url-pattern>
+        <servlet-name>FacesServlet</servlet-name>
+    </filter-mapping>
+    
+   <filter-mapping>
+        <filter-name>ExtensionsFilter</filter-name>
+        <servlet-name>FacesServlet</servlet-name>
     </filter-mapping>
 
     <listener>
