--- a/src/tast.properties
+++ b/src/tast.properties
@@ -21,8 +21,8 @@ sql.scriptdir = /home/juri/sql/
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
 #mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-#mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\workspace\\tast\\etc\\gis
-mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
+mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\workspace\\tast\\etc\\gis
+#mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
 mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.layer.status.continent.userlabel=Continents
@@ -56,3 +56,8 @@ map.default.extent.y.max = +9000000
 #
 map.scale.factor = 360000
 map.max.magnification = 100
+
+# image database
+images.dir = 	
+images.thumbnail.width = 100	
+images.thumbnail.height = 100	
