--- a/src/tast.properties
+++ b/src/tast.properties
@@ -19,12 +19,14 @@ import.logitem.dateformat = yyyy/MM/dd HH:mm:ss:S
 sql.scriptdir = /home/juri/sql/
 
 #maps
-#mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
-#mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\workspace\\tast\\etc\\gis
+mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
+mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
+#mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\SlaveTrade\\projects\\tast\\etc\\gis
 #mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
-mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
-mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
+#mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
+#mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
+map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
+map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
 map.layer.status.continent.userlabel=Continents
 
 # this should be clear, also it depends on the
@@ -56,8 +58,3 @@ map.default.extent.y.max = +9000000
 #
 map.scale.factor = 360000
 map.max.magnification = 100
-
-# image database
-images.dir = 	
-images.thumbnail.width = 100	
-images.thumbnail.height = 100	
