*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@467 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -58,3 +58,8 @@ map.default.extent.y.max = +9000000
 #
 map.scale.factor = 360000
 map.max.magnification = 100
+
+#images
+images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
+images.thumbnail.width = 100	
+images.thumbnail.height = 100	
