--- a/src/tast.properties
+++ b/src/tast.properties
@@ -60,6 +60,7 @@ map.scale.factor = 360000
 map.max.magnification = 100
 
 #images
-images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
+#images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
+images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\images
 images.thumbnail.width = 100	
 images.thumbnail.height = 100	
