*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@478 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -27,14 +27,20 @@ mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
 #mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
 map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
 map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
-map.layer.status.continent.userlabel=Continents
+map.layer.status.continents.userlabel=Continents
+map.layer.status.boundries.userlabel=Boundries
+map.layer.status.rivers.userlabel=Rivers
+map.layer.status.winds.userlabel=Wind flows
+map.layer.status.flows.userlabel=Water flows
+map.layer.status.regions.userlabel=Regions
+
 
 # this should be clear, also it depends on the
 # selected projection
-map.default.extent.x.min = -18000000
-map.default.extent.x.max = +18000000
-map.default.extent.y.min = -9000000
-map.default.extent.y.max = +9000000
+map.default.extent.x.min = -11052000
+map.default.extent.x.max = 6228000
+map.default.extent.y.min = -4788000
+map.default.extent.y.max = 6732000
 
 # This determines the farthest and the closest view on
 # the map. The scale on the map is implemented as an
@@ -61,6 +67,6 @@ map.max.magnification = 100
 
 #images
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
-images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\images
+images.dir = /home/juri/workspace/tast/WebContent/images
 images.thumbnail.width = 100	
 images.thumbnail.height = 100	
