--- a/src/tast.properties
+++ b/src/tast.properties
@@ -67,6 +67,7 @@ map.max.magnification = 100
 
 #images
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
-images.dir = /home/juri/workspace/tast/WebContent/images
+#images.dir = /home/juri/workspace/tast/WebContent/images
+images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\images
 images.thumbnail.width = 100	
 images.thumbnail.height = 100	
