*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@493 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -8,7 +8,7 @@ import.java.memory = 256m
  
 # used mainly by the Import class
 import.stattransfer = C:\\Program Files\\StatTransfer8\\st.exe
-import.rootdir = C:\\Documents and Settings\\zich\\My Documents\\Library\\SlaveTrade\\imports
+import.rootdir = C:\\Documents and Settings\\jzich\\My Documents\\tast\\import
 # import.rootdir = D:\\Library\\SlaveTrade\\imports
 
 # used by the web interface of import
