*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@499 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -69,5 +69,9 @@ map.max.magnification = 100
 #images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
 #images.dir = /home/juri/workspace/tast/WebContent/images
 images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\images
-images.thumbnail.width = 100	
-images.thumbnail.height = 100	
+images.title.maxlen = 200
+images.creator.maxlen = 200
+images.source.maxlen = 500
+images.references.maxlen = 500
+images.emorylocation.maxlen = 500
+
