--- a/src/tast.properties
+++ b/src/tast.properties
@@ -75,3 +75,6 @@ images.source.maxlen = 500
 images.references.maxlen = 500
 images.emorylocation.maxlen = 500
 
+#eventline
+eventline.image.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\eventline
+
