*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@551 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -21,12 +21,9 @@ sql.scriptdir = /home/juri/sql/
 #maps
 #mapserver.mapfile.skeleton = /home/juri/gis/tast_map_skeleton.map
 #mapserver.mapfile.output = /home/juri/gis/map_{TIME}.map
-mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\workspace\\tast\\etc\\gis
-#mapserver.mapfile.dir = D:\\Library\\SlaveTrade\\projects\\TransAtlanticSlaveTrade\\etc\\gis
+mapserver.mapfile.dir = C:\\Documents and Settings\\jzich\\My Documents\\tast\\maps\\wgs84
 mapserver.mapfile.skeleton = ${mapserver.mapfile.dir}\\tast_map_skeleton.map
 mapserver.mapfile.output = ${mapserver.mapfile.dir}\\map_{TIME}.map
-map.projection.in = proj=latlong,ellps=WGS84,datum=WGS84,no_defs
-map.projection.out = proj=moll,ellps=WGS84,lat_0=0,lon_0=0
 map.layer.status.continents.userlabel=Continents
 map.layer.status.boundries.userlabel=Boundries
 map.layer.status.rivers.userlabel=Rivers
@@ -37,10 +34,10 @@ map.layer.status.regions.userlabel=Regions
 
 # this should be clear, also it depends on the
 # selected projection
-map.default.extent.x.min = -11052000
-map.default.extent.x.max = 6228000
-map.default.extent.y.min = -4788000
-map.default.extent.y.max = 6732000
+map.default.extent.x.min = -180
+map.default.extent.x.max = 180
+map.default.extent.y.min = -90
+map.default.extent.y.max = 90
 
 # This determines the farthest and the closest view on
 # the map. The scale on the map is implemented as an
@@ -62,7 +59,7 @@ map.default.extent.y.max = 6732000
 # max = ---------------------  <-->  map.max.magnification 
 #         map.scale.factor
 #
-map.scale.factor = 360000
+map.scale.factor = 1
 map.max.magnification = 100
 
 #images
@@ -77,4 +74,3 @@ images.emorylocation.maxlen = 500
 
 #eventline
 eventline.image.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast\\eventline
-
